--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Guesser Trivia!!</title>
+    <title>Guess Dat Letter!!</title>
 
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <!-- Where guesses will be pushed-->
-                    Your Guesses so far: <span id="user-guess"></span>
+                    Your Guesses so far: <span id="user-guesses"></span>
                 </div>
             </div>
             <!-- Score so far -->
