refactored code and added clickable buttons for the game

--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
         </div>
         <main class="container">
             <!-- Intro Message -->
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-lg-12">
                     <p class="intro-text text-center">Can you guess what letter I am thinking of?</p>
+                    <!-- Letters to click on -->
+                    <strong>
+                        <p class="text-center">Choose a letter by clicking one of the buttons below or typing a key on your keyboard</p>
+                    </strong>
+                    <br>
                 </div>
+                <!-- Letter Buttons -->
+                <div class="col-lg-12" id="letter-buttons-container"></div>
             </div>
+            <br>
             <!-- What the user has guessed so far -->
             <div class="row">
                 <div class="col-lg-12 text-center">
